# search-demo

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml
crates/track-macro/: Cargo.toml
crates/track-macro/src/: lib.rs
docker/: Dockerfile  docker-compose.pg.yml
embed-server/: embed.py  main.py  requirements.txt  test_main.http
pythonProject/: main.py
scripts/: download-models.sh  mock.sh
src/: constant.rs  db.rs  main.rs  state.rs
src/ai/: embeddings.rs  image_to_prompt.rs  mod.rs  translation.rs
src/ai/clip/: mod.rs  preprocess.rs  utils.rs
src/db/: mod.rs  s3.rs  sql.rs
src/db/entity/: full_text.rs  mod.rs  text.rs  vector.rs
src/handler/: inbound.rs  local.rs  mod.rs  search.rs  upload.rs
src/model/: Input_data.rs  image.rs  input.rs  item.rs  mod.rs  search.rs  text.rs
src/model/search/: full_text.rs  mod.rs  vector.rs
src/rank/: mod.rs
src/state/: data_handler.rs  mod.rs
src/utils/: image.rs  mod.rs
src/vo/: mod.rs  result.rs
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  main.tsx  types.ts
ui/src/components/: action.tsx  add.tsx  gallery.tsx  image-search.tsx  image.tsx  item-search.tsx  item.tsx  resp.tsx  text.tsx
ui/src/hook/: useAdd.ts  useSearch.ts  useUpload.ts
ui/src/store/: index.ts
