[package]
name = "search-demp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
image = "0.25.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1"
surrealdb = "1.5.4"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
ort = { version = "2.0.0-rc.4", features = ["coreml"] }
ndarray = { version = "0.15.6", features = ["serde"] }
tokenizers = "0.19.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
