[package]
name = "search-demo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart"] }
image = "0.25.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v2.0.0-alpha.9" }
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
ort = { version = "2.0.0-rc.4", features = ["coreml"] }
ndarray = { version = "0.15.6", features = ["serde"] }
tokenizers = "0.19.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
futures = "0.3.30"
rand = "0.8.5"
regex = "1.10.6"
futures-util = "0.3.30"
itertools = "0.13.0"
minio = { version = "0.2.0-alpha", git = "https://github.com/minio/minio-rs.git" }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
